trying to fix nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ figcaption{
 /* Header Styling */
 
 .header{
+  height: 357px;
 
 }
 
